test/divbyzero.slq
// args: --run

def main(){
	x:=0:!ℚ;
	return x/0; // error
}
